# minecraft-drone-coursework

./: .gitignore  CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
config/: patrol_params.yaml
launch/: astar_planner_test.launch.py  drone_patrol.launch.py  entity_drone_patrol.launch.py  full_mission_astar.launch.py  full_mission_no_lidar.launch.py  map_builder.launch.py  spawn_drone.launch.py  waypoint_square_patrol.launch.py
minecraft_drone_coursework/: drone_entity_controller_node.py  drone_spawn_node.py  lidar_processor_node.py  map_builder_node.py  mission_controller_node.py  mission_planner_node.py  path_planner_node.py  player_camera_follow_node.py  sensor_monitor_node.py  visualizer_node.py  waypoint_square_controller_node.py  world_setup_node.py
rviz/: minecraft_drone.rviz
